--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*#region*/
 .flex-container-nav {
     display: flex;
     justify-content: center;
@@ -8,24 +9,55 @@
 }
 
 .flex-container-nav div {
-    display:flex;
+    display: flex;
     justify-content: center;
     flex-direction: row;
 }
 
-.navbar-btn {
-    text-decoration: none;
-    border: solid 2px red;
-    padding: 10px;
-    width: 35px;
-    text-align: center;
-}
-
-.Logo{
+.Logo {
     font-size: 30px;
     text-decoration: none;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 600;
-    margin-left: px;
+    color: rgb(85, 26, 139);
 }
 
+.Logo:active {
+    color: red;
+}
+
+.navbar-btn {
+    text-decoration: none;
+    border: solid 2px;
+    border-color: rgb(85, 26, 139)gold gold rgb(85, 26, 139);
+    padding: 5.6px;
+    width: 40px;
+    text-align: center;
+    border-radius: 3px;
+    margin: 3px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.10);
+    color: rgb(85, 26, 139);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.navbar-btn:hover {
+    background-color: rgba(0, 0, 0, 0.06);
+
+}
+
+.flex-container-nav input {
+    width: 110px;
+    border: solid 1.5px rgb(85, 26, 139);
+    border-radius: 3px;
+    background-color: rgba(0, 0, 0, 0.038);
+}
+
+.flex-container-nav input::placeholder {
+    color: rgb(85, 26, 139);
+}
+
+.flex-container-nav input::placeholder:focus {
+    color: gold;
+}
+
+/*#endregion*/
