--- a/style.css
+++ b/style.css
@@ -61,3 +61,39 @@
 }
 
 /*#endregion*/
+
+.homepage-grid{
+    display: grid;
+    grid-template-columns: auto 1260px auto;
+    grid-template-rows: 100px 400px 200px auto;
+}
+.homepage-main{
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    background-color: white;
+
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+}
+.homepage-card{
+margin: 15px;
+box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
+border-radius: 6px;
+}   
+.homepage-card:hover{
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.55);
+}
+#homepage-card-bil{
+background-image: url(Shelby.jpg);
+background-size: cover;
+}
+#homepage-card-mc{
+    background-image: url(CRF1000.jpg);
+    background-size: cover;
+    }
+#homepage-card-misc{
+    background-image: url(Misc.jpg);
+    background-size: cover;
+}
